# fraud-detection-ml

./: .flake8  .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
artifacts/: metrics_test.json  threshold.json
notebooks/: 01_eda.ipynb  02_preprocessing.ipynb  03_modeling.ipynb  04_inference.ipynb  g_encoding.joblib  j_target_encoding.joblib  model_best_calibrated.pkl  model_best_prefit.pkl  scaler.pkl
src/: calibration.py  data_prep.py  inference.py  train.py  utils.py
src/fraud_detection/: __init__.py  calibration.py  data_prep.py  inference.py  train.py  utils.py
tests/: test_data_prep.py  test_utils.py
