[tool.poetry]
name = "fraud-detection-ml"
version = "0.1.1"
description = "Technical test ML deteccion de fraude"
authors = ["Daniel Bastidas <danielb.data@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
numpy = "^1.26.4"
scikit-learn = "^1.5.1"
xgboost = "^2.0.3"
lightgbm = "^4.5.0"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
optuna = "^3.6.1"
joblib = "^1.4.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
black = "^24.8.0"
flake8 = "^7.1.1"
ipykernel = "^6.29.5"

[tool.black]
line-length = 88
target-version = ["py310"]
skip-string-normalization = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"